--- a/Nasz_wykres.Rmd
+++ b/Nasz_wykres.Rmd
@@ -2,8 +2,12 @@ print("hello")
 install.packages("tidyverse")
 
 install.packages("ggplot2")
-library(mpg)
 
 # Ładowanie pakietu ggplot2
 library(ggplot2)
 
+View(mpg) 
+# Wykres punktowy ze zbioru danych mpg
+ggplot(mpg, aes(x = displ, y = hwy, color = drv)) +
+  geom_point(size = 3) 
+ 
